--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
 <script  src="faq.js"></script>
+
 </head>
 <body style="background-color:#181818">
+    </script>
     <header >
     <nav class="main-nav">
         <input type="checkbox" id="check">
@@ -20,6 +22,9 @@
         <i class="fas fa-bars" ></i>
         </label>
         <div class="toplogo"><img src="logo.svg" alt=""></div>
+        <label for="">
+            <i><img src="cart.webp" alt="" class="cart" ></i>
+        </label>
         <ul class="navlinks">
         <li><a href="profile.html">Profile</a></li>
         <li><a href="about.html">Track order</a></li>
@@ -294,6 +299,19 @@
 </div>
 <div class="center"><img src="logo.svg" alt="" style="width:218px"></div>
 </footer>
-<script  src="amin.js"></script>
+<script>
+    window.onscroll = function() {myFunction()};
+    
+    var navbar = document.getElementById("main-nav");
+    var sticky = navbar.offsetTop;
+    
+    function myFunction() {
+    if (window.pageYOffset >= sticky) {
+        navbar.classList.add("sticky")
+    } else {
+        navbar.classList.remove("sticky");
+    }
+    }
+    </script>
 </body>
 </html>
